# ParallelCondensedMSTBoruvka

./: MANIFEST.in  README.md  pyproject.toml  setup.py  test.ipynb
notebooks/: colab_demo.ipynb  test.ipynb
src/parallel_condensed_mst_boruvka/: __init__.py  _boruvka.pyx  core.py
